styles.css
body {
    font-family: 'Arial', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    color: #333;
}

.container {
    max-width: 100%; /* Update to make container width 100% */
    margin: 0 auto;
}

header {
    background-color: #2b2c2d;
    color: #c6c7c9;
    text-align: center;
    padding: 20px 0;
}

h1 {
    margin: 0;
    font-size: 2em;
}

nav {
    margin-top: 20px; /* Add margin for navigation links */
}

nav a {
    color: #fff;
    margin: 0 15px;
    text-decoration: none;
}

#main-banner {
    position: relative;
    max-width: 100%;
    overflow: hidden;
}

#main-banner img {
    width: 100%;
    height: auto;
}

.description {
    position: absolute;
    top: 50%;
    left: 20%;
    transform: translate(-30%, -50%);
    background-color: rgba(0, 0, 0, 0.7);
    color: #fff;
    padding: 20px;
    border-radius: 8px;
    
}
p1 {
    width: 90%;
}

